tests/expectations/compiler/constructor/not_upgradable_constructor_does_not_match_fail.out
Error [ETYC0372156]: A 'noupgrade', 'admin', or 'checksum' constructor must be empty. The Leo compiler will insert the appropriate code.
    --> compiler-test:4:5
     |
   4 |     @noupgrade
     |     ^^^^^^^^^^
   5 |     async constructor() {
     |     ^^^^^^^^^^^^^^^^^^^^^
   6 |         assert_eq(self.edition, 0u16);
     |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   7 |     }
     |     ^
